unpackaged/main/default/objects/dataxess__Dataxess_Setting__mdt/dataxess__Dataxess_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Dataxess Setting</label>
    <pluralLabel>Dataxess Settings</pluralLabel>
</CustomObject>