unpackaged/main/default/objects/dataxess__Dataxess_Setting__mdt/fields/dataxess__FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>dataxess__FieldMapping__c</fullName>
    <label>Field Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>