unpackaged/main/default/objects/dataxess__Dataxess_Setting__mdt/fields/dataxess__Fields__c.field-meta.xml
<CustomField>
    <fullName>dataxess__Fields__c</fullName>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>