unpackaged/main/default/objects/dataxess__Dataxess_Setting__mdt/fields/dataxess__UpdateFields__c.field-meta.xml
<CustomField>
    <fullName>dataxess__UpdateFields__c</fullName>
    <label>UpdateFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>